@@ -1,3 +1,9 @@
+fee (floyd) (08/14/02)
+----------------------
+Modifications:
+ + fixed acinclude to parse the new QT_VERSION from qt3.0.5
+   maintaining compatibility with qt2.3.2
+
 fee (floyd) (08/08/02)
 ----------------------
 Modifications:
